@@ -4,7 +4,6 @@
 void
 bsp_cleanup(void)
 {
-void rtemsReboot();
 printk("RTEMS terminated; rebooting...\n");
-rtemsReboot();
+bsp_reset();
 }
